--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -93,7 +93,7 @@
       content: @icon-arrow;
     }
 
-    &.active {
+    &.open {
       &::before {
         transform: translateY(-50%) rotate(0deg) translate3d(0, 0, 0);
       }
@@ -109,7 +109,6 @@
     &.open {
       display: block;
       margin-top: -1px;
-      position: absolute;
       top: 100%;
       left: 0;
       z-index: 180;
