--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -76,6 +76,8 @@
     display: block;
     text-decoration: none;
     color: initial;
+    padding:5px;
+    border: 1px solid @gray-ddd;
 
     &::before {
       font-size: 10px;
@@ -112,7 +114,7 @@
       top: 100%;
       left: 0;
       z-index: 180;
-      box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+      box-shadow: 0 6px 12px rgba(@gray-base, .175);
     }
   }
 }
