--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -76,7 +76,7 @@
     display: block;
     text-decoration: none;
     color: initial;
-    padding:5px;
+    padding: 10px 15px;
     border: 1px solid @gray-ddd;
 
     &::before {
@@ -111,6 +111,7 @@
     &.open {
       display: block;
       margin-top: -1px;
+      position: absolute;
       top: 100%;
       left: 0;
       z-index: 180;
