--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -111,7 +111,7 @@
     &.open {
       display: block;
       margin-top: -1px;
-      position: absolute;
+      // position: absolute;
       top: 100%;
       left: 0;
       z-index: 180;
