--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -74,6 +74,7 @@
 
   .menu-trigger {
     display: block;
+    position: relative;
     text-decoration: none;
     color: initial;
     padding: 10px 15px;
