--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -145,5 +145,6 @@ body {
 }
 
 .mce-container-body [aria-label~="accordion"] {
-  display: block;
+  // Show this icon in the editor - because it's hidden from old templates
+  display: inline-block;
 }
