--- a/docs/_includes/nav/components.html
+++ b/docs/_includes/nav/components.html
@@ -113,6 +113,7 @@
   </ul>
 </li>
 <li><a href="#ku-entries">KU entry bar (indgange)</a></li>
+<li><a href="#ku-dropdowns">KU dropdowns</a></li>
 <li>
   <a href="#advanced-lists">KU advanced lists</a>
   <ul class="nav">
