--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -75,8 +75,7 @@
   .menu-trigger {
     display: block;
     position: relative;
-    text-decoration: none;
-    color: initial;
+    cursor: pointer;
     padding: 10px 15px;
     border: 1px solid @gray-ddd;
 
@@ -112,8 +111,8 @@
 
     &.open {
       display: block;
+      width: 100%;
       margin-top: -1px;
-      // position: absolute;
       top: 100%;
       left: 0;
       z-index: 180;
