--- a/docs/_includes/components/ku-dropdowns.html
+++ b/docs/_includes/components/ku-dropdowns.html
@@ -29,7 +29,7 @@
     </script>
   </div>
   {% highlight html %}
-  &lt;script&gt;
+  <script>
   $(function() {
       $(".menu-trigger").click(function() {
         $(this).toggleClass("open");
@@ -45,7 +45,7 @@
         }
       });
     });
-  &lt;/script&gt;
+  </script>
   <div class="linkslist">
     <div class="menu-trigger" href="#">Vælg emne</div>
     <ul class="list-group menu-list">
