--- a/less/panels.less
+++ b/less/panels.less
@@ -35,7 +35,7 @@
   margin-top: 0;
   margin-bottom: 0;
   font-size: 18px;
-  @media (min-width: @screen-md-min) {
+  @media (min-width: @screen-md) {
     font-size: 16px;
   }
   font-weight: 600;
@@ -360,6 +360,10 @@
     border: 0;
 
     .panel-title {
+      font-size: 16px;
+      @media (min-width: @screen-md) {
+        font-size: 14.4px;
+      }
       line-height: 20px;
 
       a {
