Left menu icons

--- a/docs/_includes/components/ku-dropdowns.html
+++ b/docs/_includes/components/ku-dropdowns.html
@@ -3,7 +3,7 @@
   <p>Component which can display a list of clickable links.</p>
   <div class="bs-example" data-example-id="ku-dropdowns">
     <div class="linkslist">
-      <div class="menu-trigger" href="#">Vælg emne</div>
+      <div class="menu-trigger">Vælg emne</div>
       <ul class="list-group menu-list">
         <li class="list-group-item"><a href="https://www.google.com" title="Google">Google</a></li>
         <li class="list-group-item"><a href="https://www.bbc.co.uk" title="Go to BBC">BBC</a></li>
