--- a/docs/_includes/components/ku-dropdowns.html
+++ b/docs/_includes/components/ku-dropdowns.html
@@ -3,51 +3,19 @@
   <p>Component which can display a list of clickable links.</p>
   <div class="bs-example" data-example-id="ku-dropdowns">
     <div class="linkslist">
-      <div class="menu-trigger">Vælg emne</div>
+      <input type="checkbox" id="list-item">
+      <label for="list-item" class="menu-trigger">Vælg</label>
       <ul class="list-group menu-list">
         <li class="list-group-item"><a href="https://www.google.com" title="Google">Google</a></li>
         <li class="list-group-item"><a href="https://www.bbc.co.uk" title="Go to BBC">BBC</a></li>
         <li class="list-group-item"><a href="https://www.facebook.com" title="Go to Facebook">Facebook</a></li>
       </ul>
     </div>
-    <script>
-    $(function() {
-        $(".menu-trigger").click(function() {
-          $(this).toggleClass("open");
-          $(this).next(".menu-list").toggleClass("open");
-        });
-        $(document).click(function(e) {
-          e.stopPropagation();
-          var el = $(".linkslist");
-          //check if the clicked area is dropdown or not
-          if (el.has(e.target).length === 0) {
-            $(".menu-trigger").removeClass("open");
-            $(".menu-list").removeClass("open");
-          }
-        });
-      });
-    </script>
   </div>
   {% highlight html %}
-  <script>
-  $(function() {
-      $(".menu-trigger").click(function() {
-        $(this).toggleClass("open");
-        $(this).next(".menu-list").toggleClass("open");
-      });
-      $(document).click(function(e) {
-        e.stopPropagation();
-        var el = $(".linkslist");
-        //check if the clicked area is dropdown or not
-        if (el.has(e.target).length === 0) {
-          $(".menu-trigger").removeClass("open");
-          $(".menu-list").removeClass("open");
-        }
-      });
-    });
-  </script>
   <div class="linkslist">
-    <div class="menu-trigger" href="#">Vælg emne</div>
+    <input type="checkbox" id="list-item">
+    <label for="list-item" class="menu-trigger">Vælg</label>
     <ul class="list-group menu-list">
       <li class="list-group-item"><a href="https://www.google.com" title="Google">Google</a></li>
       <li class="list-group-item"><a href="https://www.bbc.co.uk" title="Go to BBC">BBC</a></li>
