--- a/docs/_includes/components/ku-dropdowns.html
+++ b/docs/_includes/components/ku-dropdowns.html
@@ -6,9 +6,9 @@
       <input type="checkbox" id="list-item">
       <label for="list-item" class="menu-trigger">Vælg</label>
       <ul class="list-group menu-list">
-        <li class="list-group-item"><a href="https://www.google.com" title="Google">Google</a></li>
-        <li class="list-group-item"><a href="https://www.bbc.co.uk" title="Go to BBC">BBC</a></li>
-        <li class="list-group-item"><a href="https://www.facebook.com" title="Go to Facebook">Facebook</a></li>
+        <li class="list-group-item"><a href="#" title="">Google</a></li>
+        <li class="list-group-item"><a href="#" title="">BBC</a></li>
+        <li class="list-group-item"><a href="#" title="">Facebook</a></li>
       </ul>
     </div>
   </div>
@@ -17,9 +17,9 @@
     <input type="checkbox" id="list-item">
     <label for="list-item" class="menu-trigger">Vælg</label>
     <ul class="list-group menu-list">
-      <li class="list-group-item"><a href="https://www.google.com" title="Google">Google</a></li>
-      <li class="list-group-item"><a href="https://www.bbc.co.uk" title="Go to BBC">BBC</a></li>
-      <li class="list-group-item"><a href="https://www.facebook.com" title="Go to Facebook">Facebook</a></li>
+      <li class="list-group-item"><a href="#" title="">Google</a></li>
+      <li class="list-group-item"><a href="#" title="">BBC</a></li>
+      <li class="list-group-item"><a href="#" title="">Facebook</a></li>
     </ul>
   </div>
   {% endhighlight %}
