--- a/less/faculties/jur.less
+++ b/less/faculties/jur.less
@@ -156,6 +156,9 @@
       &:hover {
         background: @jura-sub_3-hover;
       }
+      &::before {
+        color: @white-color;
+      }
     }
   }
 
