--- a/docs/_includes/getting-started/examples.html
+++ b/docs/_includes/getting-started/examples.html
@@ -34,7 +34,7 @@
     </div>
   </div>
 
-  <h2 id="examples-navbars">Navbars in action</h2>
+  <!-- <h2 id="examples-navbars">Navbars in action</h2>
   <div class="row bs-examples">
     <div class="col-xs-6 col-md-4">
       <a class="thumbnail" href="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/navbar/">
@@ -122,5 +122,5 @@
       <h3>Off-canvas</h3>
       <p>Build a toggleable off-canvas navigation menu for use with Bootstrap.</p>
     </div>
-  </div>
+  </div> -->
 </div>
