--- a/docs/_includes/nav/getting-started.html
+++ b/docs/_includes/nav/getting-started.html
@@ -23,9 +23,9 @@
   <a href="#examples">Examples</a>
   <ul class="nav">
     <li><a href="#examples-framework">Using the framework</a></li>
-    <li><a href="#examples-navbars">Navbars in action</a></li>
+    <!-- <li><a href="#examples-navbars">Navbars in action</a></li>
     <li><a href="#examples-custom">Custom components</a></li>
-    <li><a href="#examples-experiments">Experiments</a></li>
+    <li><a href="#examples-experiments">Experiments</a></li> -->
   </ul>
 </li>
 <li>
