--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -605,25 +605,27 @@
       }
     }
 
-    &.size3 {
-      &.with-img {
-        .box2 {
-          img {
-            max-height: none;
-            max-width: 100%;
-          }
-        }
-      }
+    //&.size3 {
+      // Since all the image is in view, this has been disabled
+      // &.with-img {
+      //   .box2 {
+      //     img {
+      //       max-height: none;
+      //       max-width: 100%;
+      //     }
+      //   }
+      // }
 
-      &.img-left,
-      &.img-right {
-        .box2 {
-          img {
-            width: 100%;
-          }
-        }
-      }
-    }
+      // &.img-left,
+      // &.img-right {
+      //
+      //   .box2 {
+      //     img {
+      //       width: 100%;
+      //     }
+      //   }
+      //}
+    //}
   }
 }
 @media (min-width: @screen-xs) and (max-width: @screen-sm-max) {
