--- a/less/variables.less
+++ b/less/variables.less
@@ -16,6 +16,7 @@
 @gray-666:               #666;
 @gray-888:               #888;
 @gray-999:               #999;
+@gray-d7:                #d7d7d7;
 @gray-ddd:               #ddd;
 @gray-lighter:           #eee;
 
