--- a/less/mixins/ku-content-elements.less
+++ b/less/mixins/ku-content-elements.less
@@ -17,3 +17,11 @@
   letter-spacing: 0.6px;
   font-weight: 600;
 }
+
+.image-fadeOut() {
+  filter: brightness(90%) blur(0);
+}
+
+.image-fadeIn() {
+  filter: brightness(100%) blur(0);
+}
