--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -1,5 +1,74 @@
 /* KU custom elements */
-// Find something boxes:
+// Gamle nyhedsbokse:
+
+.gridnyhed {
+  height: @gridbox1;
+  background-color: @grey-newsbox;
+  display: flex;
+  flex-direction: column;
+
+  .nyhed-illustration {
+    flex: 0 1 200px;
+    overflow: hidden;
+
+    a {
+      display: flex;
+      justify-content: center;
+      flex: inherit;
+      height: 100%;
+
+      img {
+        flex: none;
+        object-fit: cover;
+        .image-fadeOut();
+      }
+    }
+  }
+  @media (min-width: @screen-md) {
+    .nyhed-illustration {
+      flex: 0 1 160px;
+    }
+  }
+
+  h2 {
+    color: @ku-news-gray;
+    font-size: 17px;
+    line-height: 120%;
+    letter-spacing: 0.85px;
+    font-weight: 700;
+
+    a {
+      display: inline;
+    }
+  }
+
+  .nyhed-teaser {
+    display: block;
+  }
+
+  .nyhed-tema {
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 0.36px;
+
+    span {
+      // Hide date
+      display: none;
+    }
+  }
+  @media (min-width: @screen-md) {
+    .nyhed-teaser {
+      display: none;
+    }
+  }
+
+  &:hover {
+    img {
+      .image-fadeIn();
+    }
+  }
+}
+// "Find something" boxes:
 
 .find-box {
   height: 130px;
@@ -109,6 +178,7 @@
       margin-top: 0;
       height: 0;
       transform: scaleY(0);
+
       li {
         a {
           display: block;
