--- a/less/variables.less
+++ b/less/variables.less
@@ -21,6 +21,7 @@
 @gray-lighter:           #eee;
 
 @semi-white:             #f1f1f1;
+@grey-newsbox:           #f2f2f2;
 @gray-f5:                #f5f5f5;
 @white-color:            #fff;
 
