--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -9,9 +9,10 @@
   background-color: @grey-newsbox;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 
   .nyhed-illustration {
-    flex: 0 1 200px;
+    flex: 0 0 200px;
     overflow: hidden;
 
     a {
