--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -35,7 +35,7 @@ body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   font-family: @font-family-base;
-  font-size: @font-size-base;
+  font-size: @font-size-large;
   font-weight: 400;
   line-height: @line-height-base;
   color: @text-color;
@@ -46,9 +46,9 @@ body {
   position: relative;
   @media (max-width: @screen-xs-max) {
     -webkit-overflow-scrolling: touch;
-    html:not(.non-responsive) & {
-      font-size: @font-size-large;
-    }
+    // html:not(.non-responsive) & {
+    //   font-size: @font-size-large;
+    // }
   }
 }
 
@@ -174,7 +174,7 @@ hr {
 @media (max-width: @screen-sm-min) {
   .btn,
   .form-control {
-    font-size: @font-size-large!important;
+    // font-size: @font-size-large!important;
     height: auto!important;
   }
 }
