--- a/less/navbar.less
+++ b/less/navbar.less
@@ -341,6 +341,7 @@
 #topbar_menu {
   height: 100%;
   margin-right: 0;
+  font-size: 13px;
 
   &.navbar-nav {
     > li {
@@ -839,7 +840,7 @@
       width: 36%;
     }
     @media (min-width: @screen-md-min) {
-      left: (@grid-gutter-width / 2);
+      left: 24px;
       width: 25%;
     }
     // English version
