--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -11,6 +11,8 @@
   .ku-branding-logo {
     .logo-img {
       .img-responsive;
+      // fix for IE 8-10 since svgs are disproportionately sized
+      width: 100% \9;
     }
     height: @ku-branding-box-height;
     width: 61px;
