--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -15,6 +15,7 @@
 .gridbox {
   width: 100%;
   position: relative;
+  font-size: @font-size-base;
   line-height: @line-height-small;
   border-radius: 2px;
   display: flex;
