--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -417,14 +417,14 @@
         .header {
           color: @ku-news-gray;
           font-size: 1.3em;
-          line-height: 1.2em;
+          line-height: 1.3em;
           text-transform: none;
           padding: 0;
           margin: 15px 0 5px;
         }
 
         .text {
-          display: none;
+          // display: none;
           font-size: 1.1em;
           font-weight: 400;
           line-height: 1.45em;
