--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -36,6 +36,8 @@ body {
   text-rendering: optimizeLegibility;
   font-family: @font-family-base;
   font-size: @font-size-large;
+  font-style: normal;
+  font-variant: normal;
   font-weight: 400;
   line-height: @line-height-base;
   color: @text-color;
