--- a/less/variables.less
+++ b/less/variables.less
@@ -461,6 +461,9 @@
 @screen-sm-max:              (@screen-md-min - 1);
 @screen-md-max:              (@screen-lg-min - 1);
 
+// KU specific
+@screen-xs-flip: (@screen-xs + 1);
+
 
 //== Grid system
 //
