--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -211,3 +211,25 @@
     }
   }
 }
+
+// Beredskabsbanner
+#warning-banner {
+  background-color: @beredsskabs-banner-bg;
+  padding: 0;
+  position: relative;
+  width: 100%;
+}
+#warning-banner-inner {
+  margin: 0 auto;
+  padding: 1em 1em 1em 100px;
+  max-width: 874px;
+  background: transparent url("https://cms.ku.dk/grafik/beredskab.png") no-repeat center left;
+  p {
+    font-size: 16px;
+  }
+}
+#warning-banner-header {
+  font-size: 3em;
+  margin: 0;
+  padding: 0;
+}
