--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -809,6 +809,9 @@
 
       &.size1 {
         &.with-img {
+          .text {
+            display: none;
+          }
           .box2 {
             img {
               max-height: 146%;
