--- a/less/variables.less
+++ b/less/variables.less
@@ -32,7 +32,7 @@
 @ku-footer-icon-size:    28px;
 
 // KU specific colors
-
+@beredsskabs-banner-bg: #ffe100;
 @ku-red:                #901a1e;
 @ku-red-hover:          #7b161a;
 @ku-jumpboard:          #921819;
