--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -221,15 +221,16 @@
 }
 #warning-banner-inner {
   margin: 0 auto;
-  padding: 1em 1em 1em 100px;
+  padding: 15px 15px 15px 115px;
   max-width: 874px;
   background: transparent url("https://cms.ku.dk/grafik/beredskab.png") no-repeat center left;
+  background-size: 100px;
   p {
     font-size: 16px;
   }
 }
 #warning-banner-header {
-  font-size: 3em;
+  font-size: 40px;
   margin: 0;
   padding: 0;
 }
