--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -35,10 +35,11 @@ body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   font-family: @font-family-base;
-  font-size: @font-size-large;
+  font-size: 13.5px;
   font-style: normal;
   font-variant: normal;
   font-weight: 400;
+  letter-spacing: 0.3px;
   line-height: @line-height-base;
   color: @text-color;
   background-color: @body-bg;
@@ -48,6 +49,7 @@ body {
   position: relative;
   @media (max-width: @screen-xs-max) {
     -webkit-overflow-scrolling: touch;
+    font-size: @font-size-large;
   }
 }
 
