--- a/less/navbar.less
+++ b/less/navbar.less
@@ -915,7 +915,6 @@
     .dropdown-menu {
       li {
         padding: 3px 20px;
-        font-size: 1.085em;
 
         &.selected,
         &:hover {
@@ -924,5 +923,15 @@
         }
       }
     }
+  }
+
+  .global-search-options-filter {
+    margin-top: 0;
+    border-top: 0;
+    right: 1px;
+  }
+
+  .global-search-submit {
+    margin-left: -2px;
   }
 }
