--- a/less/navbar.less
+++ b/less/navbar.less
@@ -917,7 +917,7 @@
         padding: 3px 20px;
 
         &.selected,
-        &:hover {
+        &:hover, &:active {
           background-color: #efefef;
           cursor: pointer;
         }
