--- a/less/dropdowns.less
+++ b/less/dropdowns.less
@@ -40,6 +40,7 @@
   margin: 2px 0 0; // override default ul
   list-style: none;
   font-size: 12px;
+  letter-spacing: normal;
   text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
   background-color: @dropdown-bg;
   border: 1px solid @dropdown-fallback-border; // IE8 fallback
