--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -234,3 +234,11 @@
   margin: 0;
   padding: 0;
 }
+
+// Textboxes
+
+.textbox-grey {
+  background-color: @gray-lighter;
+  padding: 15px;
+  border-radius: @border-radius-base;
+}
