--- a/less/ku-datetimepicker.less
+++ b/less/ku-datetimepicker.less
@@ -452,3 +452,15 @@
     margin-right: -5px;
   }
 }
+
+.datepicker-days {
+  .table-striped {
+    .day {
+      &.active {
+        // Selected date
+        font-weight: 700;
+        background-color: #ccc;
+      }
+    }
+  }
+}
