--- a/less/faculties/jur.less
+++ b/less/faculties/jur.less
@@ -243,7 +243,7 @@
     }
   }
 }
-@media (min-width: @screen-md-min) {
+@media (min-width: @screen-md) {
   // Outline style for multiple column spans
   .double-column [class*=column],
   .one-two-column .column1,
