--- a/less/faculties/faelles.less
+++ b/less/faculties/faelles.less
@@ -240,7 +240,7 @@
     }
   }
 }
-@media (min-width: @screen-md-min) {
+@media (min-width: @screen-md) {
   // Outline style for single column spans
   .double-column [class*=column],
   .one-two-column .column1,
