--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -781,7 +781,7 @@
   .one-one-two-column .column3,
   .one-three-column .column2,
   .one-two-column .column2,
-  //.single-column .column1,
+  .single-column .column1,
   .three-one-column .column1,
   .two-one-column .column1,
   .two-one-one-column .column1 {
@@ -792,13 +792,13 @@
         display: block;
       }
 
-      &.with-img {
-        &:hover {
-          .header {
-            background: 0;
-          }
-        }
-      }
+      // &.with-img {
+      //   &:hover {
+      //     .header {
+      //       background: 0;
+      //     }
+      //   }
+      // }
 
       &.outlined {
         .header {
@@ -821,6 +821,26 @@
       }
     }
   }
+
+:not(#gridsidebar) {
+  .one-one-two-column .column3,
+  .one-three-column .column2,
+  .one-two-column .column2,
+  .single-column .column1,
+  .three-one-column .column1,
+  .two-one-column .column1,
+  .two-one-one-column .column1 {
+      .gridbox {
+        &.with-img {
+          &:hover {
+            .header {
+              background: 0;
+            }
+          }
+        }
+      }
+  }
+}
 
   .gridbox {
     &.with-img {
@@ -1010,18 +1030,6 @@
             &::before {
               bottom: 9px;
             }
-          }
-        }
-      }
-    }
-  }
-
-  :not(#gridsidebar) .single-column .column1 {
-    .gridbox {
-      &.with-img {
-        &:hover {
-          .header {
-            background: 0;
           }
         }
       }
