Left menu arrow icon

--- a/less/glyphicons.less
+++ b/less/glyphicons.less
@@ -1615,6 +1615,7 @@
   }
 }
 // KU custom font
+@icon-menu_arrow: "\78";
 @icon-facebook: "\66";
 @icon-futurity: "\75";
 @icon-instagram: "\69";
@@ -1796,6 +1797,12 @@
 
   &:hover {
     background-color: @ku-red;
+  }
+}
+
+.icon-menu_arrow {
+  &:before {
+    content: @icon-menu_arrow;
   }
 }
 
