--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -229,20 +229,30 @@
       }
 
       > a {
+        &::after {
+          content: '';
+          position: absolute;
+          top: 5px;
+          left: 0;
+          width: 10px;
+          height: 11px;
+          border: 1px solid #d6d6d6;
+          border-radius: @border-radius-base;
+        }
+
         &::before {
           .icon;
           position: absolute;
           top: 6px;
-          left: 0;
-          font-size: 8px;
-          font-weight: 400;
-          height: 10px;
-          width: 10px;
+          left: 1px;
+          font-size: 9px;
+          // height: 10px;
+          // width: 10px;
           display: inline-block;
           padding: 0 0 0 2px;
-          border-radius: @border-radius-base;
-          content: @icon-arrow;
-          border: 1px solid #d6d6d6;
+          // border-radius: @border-radius-base;
+          content: @icon-menu_arrow;
+          // border: 1px solid #d6d6d6;
           color: @ku-red;
 
           .theme-samf & {
@@ -272,6 +282,12 @@
 
         &:hover {
           &::before {
+            width: 9px;
+            z-index: 1;
+            color: @white-color;
+          }
+
+          &::after {
             background-color: @ku-red;
 
             .theme-samf & {
@@ -297,7 +313,6 @@
             .theme-teo & {
               background-color: @teol;
             }
-            color: @white-color;
           }
         }
       }
@@ -308,7 +323,7 @@
         padding-left: 20px;
 
         li {
-          > a {
+          a {
             padding: 2px 5px 2px 10px;
             display: block;
 
@@ -347,8 +362,13 @@
               }
             }
 
+            &::after {
+              display: none;
+            }
+
             &:hover::before {
               text-decoration: none;
+              width: 5px;
             }
           }
 
@@ -363,6 +383,10 @@
                   width: 4px;
                   top: 8px;
                 }
+
+                &:hover::before {
+                  width: 4px;
+                }
               }
 
               ul {
@@ -375,6 +399,10 @@
                       height: 3px;
                       width: 3px;
                       top: 8px;
+                    }
+
+                    &:hover::before {
+                      width: 3px;
                     }
                   }
                 }
