--- a/less/glyphicons.less
+++ b/less/glyphicons.less
@@ -7,6 +7,7 @@
 //
 // <a href="#"><span class="icon icon-facebook"></span> Star</a>
 // Import the fonts
+// Remember: Custom font icons are stored in the cms.
 @font-face {
   font-family: @custom-icon-font-family-name;
   src: url("@{custom-icon-font-path}@{custom-icon-font-name}.eot");
