--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -793,13 +793,13 @@
         display: block;
       }
 
-      &.with-img {
-        &:hover {
-          .header {
-            background: 0;
-          }
-        }
-      }
+      // &.with-img {
+      //   &:hover {
+      //     .header {
+      //       background: 0;
+      //     }
+      //   }
+      // }
 
       &.outlined {
         .header {
